# AI_app_Qt

./: .gitignore  AuthManager.cpp  AuthManager.h  CMakeLists.txt  LoginWindow.cpp  LoginWindow.h  README.md  abstractdb.h  database.h  doc.md  log.cpp  log.h  log.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  newloginwindow.cpp  newloginwindow.h  newloginwindow.ui  readinstruction.md  requestsToBackEnd.cpp  requestsToBackend.h  resetwarningwindow.cpp  resetwarningwindow.h  resetwarningwindow.ui  sendconfirmwindow.cpp  sendconfirmwindow.h  sendconfirmwindow.ui
tests/: testdatabase.cpp  testdatabase.hpp  testmainwindow.cpp  testmainwindow.hpp  testnewloginwindow.cpp  testnewloginwindow.hpp  tests.hpp
